Overlapping issue

--- a/style.css
+++ b/style.css
@@ -238,7 +238,6 @@ body {
 }
 
 section {
-    min-height: 100vh;
     padding: 10rem 9% 2rem;
 }
 
@@ -392,5 +391,9 @@ footer {
         flex-shrink: 0;
         margin-bottom: 2rem;
         border-radius: 50%;
+    }
+
+    section {
+        padding: 7rem 9% 2rem;
     }
 }
